--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,14 @@
-/bin/
-/obj/
-/node_modules/
-/dist/
-
-.vs
-/CeleryMisfortune/bin/Debug/netcoreapp3.1
+/CeleryMisfortune/bin
 /CeleryMisfortune/obj
 /CeleryMisfortune/wwwroot/fore-end/dist
 /CeleryMisfortune/wwwroot/fore-end/node_modules
-/CeleryMisfortune.DataAccess/bin/Debug/netcoreapp3.1
-/CeleryMisfortune.DataAccess/obj/Debug/netcoreapp3.1
+/CeleryMisfortune.DataAccess/bin
 /CeleryMisfortune.DataAccess/obj
-/CeleryMisfortune.Model/bin/Debug/netcoreapp3.1
+/CeleryMisfortune.Model/bin
 /CeleryMisfortune.Model/obj
-/CeleryMisfortune.Test/bin/Debug/netcoreapp3.1
-/CeleryMisfortune.ViewModel/bin/Debug/netcoreapp3.1
+/CeleryMisfortune.Test/bin
+/CeleryMisfortune.ViewModel/bin
 /CeleryMisfortune.Test/obj
 /CeleryMisfortune.ViewModel/obj
+
+.vs
