--- a/CeleryMisfortune.Model/CeleryMisfortune.Model.csproj
+++ b/CeleryMisfortune.Model/CeleryMisfortune.Model.csproj
@@ -8,5 +8,13 @@
   <ItemGroup>
     <PackageReference Include="WalkingTec.Mvvm.Core" Version="3.1.0" />
   </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="World\" />
+    <Folder Include="Skill\" />
+    <Folder Include="Npc\" />
+    <Folder Include="Resource\" />
+  </ItemGroup>
 </Project>
 
